2002-09-04  Alex Graveley  <alex@ximian.com>

	* gnome-vfs.applications: Add -p to gnome-sound-recorder command
	so sound files are played on startup.  Fixes bug #90959.

2002-08-20  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:
	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime:

	Add entry for shoutcast playlist (audio/x-scpls)
	
2002-08-18  James Willcox  <jwillcox@cs.indiana.edu>

	* gnome-vfs.applications:  gedit expects URIs, not local paths

2002-08-17  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added gimp as a possible application for g3fax,
	pcx, targa and xwd images
	* check-mime.pl: s/category/_category/ so the script doesn't print
	boatloads of useless warnings about Jody's change

2002-08-07  Jody Goldberg <jody@gnome.org>

	* gnome-vfs.keys.in : now that 2.0.1 is locked we can mark the
	  categories as translatable.

2002-08-05  Michael Meeks  <michael@ximian.com>

	* gnome-vfs-mime-magic: re-order so check-mime passes.

	* gnome-vfs.keys.in: ditto.

2002-08-04  Bastien Nocera  <hadess@hadess.net>

	* CVS_COMMITS: added
	* gnome-vfs-mime-magic: added magic for Apple's new .mp4 files

2002-08-02  Thomas Meeks  <thomas@imaginator.com>

	* gnome-vfs-mime-magic: Added image/x-dcm, x-sun-raster, x-sgi,
	x-pcx, x-dib, x-fits, x-fpx, x-icb, x-dpx

	* gnome-vfs.keys.in: Added appropiate file descriptions and viewers

	* gnome-vfs.mime: Added above extensions also added miff, gray,
	palm, and pict

2002-07-12  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: Added MacBinaryII file types
	fix warning about the position of the vfolder-desktop mime-type in
	gnome-vfs.keys.in

2002-07-02  Peteris Krisjanis <pecisk@inbox.lv>

	* configure.in: (ALL_LINGUAS) added Latvian (lv) support.

2002-06-29  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.mime:

	Change extension for C++ headers from "hp" to "hpp".

2002-06-28  Damon Chaplin  <damon@ximian.com>
