@@ -101,7 +101,7 @@ freeamp
 	expects_uris=true
 	requires_terminal=false
 	supported_uri_schemes=http,file
-	mime_types=audio/x-mp3,audio/x-mpeg,application/x-ogg,audio/x-wav
+	mime_types=audio/x-mp3,audio/x-mpeg,application/x-ogg,audio/x-wav,audio/mpeg
 
 freeamp-no-uris
 	command=freeamp
@@ -343,7 +343,7 @@ mpg123
 	expects_uris=non-file
 	requires_terminal=false
 	supported_uri_schemes=http,ftp,file
-	mime_types=audio/x-mp3,audio/x-mpeg
+	mime_types=audio/x-mp3,audio/x-mpeg,audio/mpeg
 
 mtv
 	command=mtv
@@ -523,7 +523,7 @@ xmms
 	expects_uris=true
 	requires_terminal=false
 	supported_uri_schemes=http,ftp,file
-	mime_types=audio/x-mp3,audio/x-mpeg,application/x-ogg,audio/x-wav,audio/x-riff
+	mime_types=audio/x-mp3,audio/x-mpeg,application/x-ogg,audio/x-wav,audio/x-riff,audio/mpeg
 
 xmms-no-uris
 	command=xmms
@@ -539,7 +539,7 @@ xmps
 	can_open_multiple_files=true
 	expects_uris=false
 	requires_terminal=false
-	mime_types=video/x-msvideo,video/x-ms-asf,video/mpeg,audio/x-mp3,audio/ac3,audio/x-wav
+	mime_types=video/x-msvideo,video/x-ms-asf,video/mpeg,audio/x-mp3,audio/ac3,audio/x-wav,audio/mpeg
 
 xpdf
 	command=xpdf
